--- a/findme.html
+++ b/findme.html
@@ -10,6 +10,7 @@
   
 
 <h2>Hello World</h2>
+<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, rerum. </p>
 
 </body>
 </html>
